--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <section id="main_content_1">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 align-self-md-center mb-3 mb-md-0">
                 <span class="text_lil_monts">
                     Talan Towers – это амбициозный проект, который выводит на новый уровень качество жизни  и предоставляемых услуг в столице.
                     Здание уже стало исключительным брендом, новой достопримечательностью на карте города, символом столицы и ее растущей
@@ -91,7 +91,7 @@
             <div class="col-12">
                 <img src="img/main/main-ritz.png" alt="" class="mw-100">
             </div>
-            <div class="col-md-3 float-right">
+            <div class="col-md-5 offset-md-7">
                 <div class="ritz_caption">
                     <span class="text_lil_monts">
                         А башню в двадцать пять  этажей  занимают отель The Ritz-Carlton, Astana и апартаменты
@@ -102,6 +102,45 @@
         </div>
     </div>
 </section>
+<section id="main_content_4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-4">
+                <img src="img/main/main-empor.png" alt="" class="mw-100">
+            </div>
+            <div class="col-md-7">
+                <div class="col-sm-6 col-md-6 offset-md-6 m_t">
+                    <span class="text_lil_monts">
+                        Объединяет две башни многофункционального
+                        комплекса торговая галерея EMPORIUM.
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="text-center w-100">
+                <a href="#">
+                    <img src="img/main/footer-facebook.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/main/footer-linkedin.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/main/footer-instagram.png" alt="">
+                </a>
+            </div>
+            <div class="text-center w-100 mt-4">
+                <a href="#" class="footer_link_contacts">
+                    Контакты
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/jquery.maskedinput.js"></script>
