--- a/about.html
+++ b/about.html
@@ -213,6 +213,28 @@
         </div>
     </div>
 </section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="text-center w-100">
+                <a href="#">
+                    <img src="img/main/footer-facebook.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/main/footer-linkedin.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/main/footer-instagram.png" alt="">
+                </a>
+            </div>
+            <div class="text-center w-100 mt-4">
+                <a href="#" class="footer_link_contacts">
+                    Контакты
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 
