--- a/about.html
+++ b/about.html
@@ -13,21 +13,31 @@
 <header>
     <div class="container">
         <div class="row">
-            <div class="col-2 d-table d_t_h">
+            <div class="col-6 col-xl-2 d-table d_t_h">
                 <div class="logo d-table-cell align-middle">
                     <img src="img/main/logo.png" alt="">
                 </div>
             </div>
-            <div class="col-10 d-table d_t_h">
-                <ul class="d-table-cell align-middle">
-                    <li>
-                        <a href="#">О нас</a>
+            <div class="col-6 col-xl-10 d-table d_t_h">
+                <ul class="desktop_menu d-table-cell align-middle">
+                    <li class="dropdown">
+                        <a href="#" class="dropBtn">
+                            О нас
+                        </a>
+                        <div class="dropdown_content">
+                            <a href="#">Инвестор</a>
+                            <a href="#">Общая информация</a>
+                        </div>
                     </li>
                     <li>
                         <a href="#">Talan Towers Offices</a>
                     </li>
-                    <li>
-                        <a href="#">Ritz-Carlton, Astana</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropBtn">Ritz-Carlton, Astana</a>
+                        <div class="dropdown_content">
+                            <a href="#">Инвестор</a>
+                            <a href="#">Общая информация</a>
+                        </div>
                     </li>
                     <li>
                         <a href="#">Ritz-Carlton Residences, Astana</a>
@@ -42,7 +52,59 @@
                         <a href="#">Контакты</a>
                     </li>
                 </ul>
+                <ul class="desktop_menu d-table-cell align-middle lang_items">
+                    <li>
+                        <a href="#">Eng</a>
+                    </li>
+                    <li>
+                        <a href="#">Рус</a>
+                    </li>
+                    <li>
+                        <a href="#">Қаз</a>
+                    </li>
+                </ul>
+
+                <div class="mobile_menu d-table-cell align-middle">
+                    <a href="#" role="button" id="dropdownMenuLink">
+                        <i class="mdi mdi-menu mdi-24px"></i>
+                    </a>
+                </div>
             </div>
+        </div>
+
+        <div class="mobile_dropdown_menu">
+            <a class="mobile_menu_item mobile_dropdown_item">
+                О нас
+                <i class="mdi mdi-menu-down"></i>
+            </a>
+            <div class="menu_item_inner">
+                <ul>
+                    <li>
+                        <a href="about.html">Инвестор</a>
+                    </li>
+                    <li>
+                        <a href="#">Общая информация</a>
+                    </li>
+                </ul>
+            </div>
+            <a class="mobile_menu_item" href="#">
+                Talan Towers Offices
+            </a>
+            <a class="mobile_menu_item" href="#">
+                Ritz-Carlton, Astana
+            </a>
+            <a class="mobile_menu_item" href="#">
+                Ritz-Carlton Residences, Astana
+            </a>
+            <a class="mobile_menu_item" href="#">
+                Emporium
+            </a>
+            <a class="mobile_menu_item" href="#">
+                Рестораны
+            </a>
+            <a class="mobile_menu_item" href="#">
+                Контакты
+            </a>
         </div>
     </div>
 </header>
@@ -51,17 +113,17 @@
     <div class="container">
         <div class="row">
             <div class="d-block col-12">
-                <h2 class="about_title light-yellow text-uppercase">инвестор проекта</h2>
+                <h2 class="about_title text_gold text-uppercase">инвестор проекта</h2>
                 <hr>
                 <img src="img/about/verny.png" alt="" class="mw-100 py-4">
-                <p class="m-5 dark-grey">
+                <p class="m-5 text_grey">
                     Заказчиком многофункционального комплекса Talan Towers выступила казахстанская
                     компания Astana Property Management, которая входит в группу Верный капитал.
                     В портфеле холдинга есть и другие успешные проекты в сфере недвижимости: отели класса -
                     The Ritz Carlton, Moscow, The Ritz-Carlton, Vienna и Rixos Borovoe.
                     Также холдинг управляет офисными зданиями Park View Office Tower и Pine Office Park в Алматы.
                 </p>
-                <a href="" class="text-uppercase light-yellow">vernycapital.com</a>
+                <a href="" class="text-uppercase text_gold">vernycapital.com</a>
             </div>
         </div>
     </div>
@@ -70,10 +132,10 @@
     <div class="container">
         <div class="row text-center py-5">
             <div class="d-block col-12">
-                <h2 class="about_title light-yellow text-uppercase">архитектура</h2>
+                <h2 class="about_title text_gold text-uppercase">архитектура</h2>
                 <hr>
                 <img src="img/about/som.png" alt="" class="mw-100 py-4">
-                <p class="my-4 dark-grey text-justify">
+                <p class="my-4 text_grey text-justify">
                     Архитектором комплекса Talan Towers выступила американская компания SOM
                     (Skidmore, Owings Merrill LLP) – одна из крупнейших компаний в сфере архитектуры,
                     дизайна интерьеров, инжиниринга и городского планирования в мире.
@@ -84,7 +146,7 @@
                     а также World Trade Center (Манхэттен, Нью-Йорк, США). Talan Towers – первый проект SOM,
                     реализованный в Астане.
                 </p>
-                <p class="my-3 dark-grey text-justify">
+                <p class="my-3 text_grey text-justify">
                     На сегодняшний день SOM — единственная компания, которая дважды была награждена премией
                     Architecture Firm Award от Американского Института Архитектуры.
                     Также деятельность фирмы была отмечена наградой Pritzker Prize, считающейся
@@ -96,10 +158,10 @@
         <div class="row py-5">
             <div class="col-md-6">
                 <div class="d-block">
-                    <p class="about_title light-yellow text-uppercase">дизайн интерьеров отеля от английских архитекторов</p>
+                    <p class="about_title text_gold text-uppercase">дизайн интерьеров отеля от английских архитекторов</p>
                     <hr>
                     <img src="img/about/richmond.png" alt="" class="mw-100 py-4">
-                    <p class="my-4 dark-grey text-justify">
+                    <p class="my-4 text_grey text-justify">
                         Разработкой интерьера отеля занималась компания Richmond International,
                         которая существует с 1966 года и обладает устойчивым реноме на рынке
                         проектирования фешенебельных резиденций, эксклюзивных отелей и ресторанов.
@@ -107,7 +169,7 @@
                         для отелей сети The Ritz-Carlton в самых разных уголках планеты, а в Астане
                         старалась отразить в дизайне местный колорит.
                     </p>
-                    <p class="my-3 dark-grey text-justify">
+                    <p class="my-3 text_grey text-justify">
                         Так, например, деревянные резные вставки, украшающие Лобби-лаундж Өzen,
                         были вдохновлены ландшафтом Мангистауских гор. Лобби отеля преображают освещенныенастенные
                         панели, которые напоминают об окаменевших хвойных лесах озера Каинды; тогда как
@@ -121,10 +183,10 @@
             </div>
             <div class="col-md-6">
                 <div class="d-block">
-                    <p class="about_title light-yellow text-uppercase">дизайн офисного пространства</p>
+                    <p class="about_title text_gold text-uppercase">дизайн офисного пространства</p>
                     <hr>
                     <img src="img/about/pringle.png" alt="" class="mw-100 py-4">
-                    <p class="my-4 dark-grey text-justify">
+                    <p class="my-4 text_grey text-justify">
                         Pringle Brandon Perkins +Will – одно из самых успешных мировых архитектурных бюро
                         в Великобритании и регионе EMEA (страны Европы, Ближнего Востока и Африки),
                         специализирующихся на дизайне интерьеров рабочего пространства и коммерческой архитектуре.
@@ -135,7 +197,7 @@
                         Поэтому было решено использовать элементы высокой архитектуры: нужную высоту потолков,
                         колонны внутри здания.
                     </p>
-                    <p class="my-3 dark-grey text-justify">
+                    <p class="my-3 text_grey text-justify">
                         При этом часть интерьера отделана теплыми материалами (натуральным камнем и высококачественным
                         деревом), которые согревают пространство. По признанию экспертов выбранный дизайн настолько
                         прост, универсален, удобен и хорош, что актуален сейчас и будет востребован через много лет.
@@ -149,10 +211,10 @@
     <div class="container">
         <div class="row">
             <div class="d-block col-12">
-                <h2 class="about_title light-yellow text-uppercase">дизайн торговой галереи emporium</h2>
+                <h2 class="about_title text_gold text-uppercase">дизайн торговой галереи emporium</h2>
                 <hr>
                 <img src="img/about/callison.png" alt="" class="mw-100 py-4">
-                <p class="my-4 dark-grey text-justify">
+                <p class="my-4 text_grey text-justify">
                     Основная концепция Talan Towers заключалась в создании центра притяжения
                     в столице – так называемого lifestyle, meeting place, где можно было бы проводить
                     за встречами/приятным досугом/шопингом целый день. Креативное архитектурное агентство
@@ -167,8 +229,8 @@
         <div class="row py-4">
             <div class="d-table col-12 py-5">
                 <img src="img/about/leed.png" alt="" class="mw-100 py-4">
-                <h5 class="light-yellow text-uppercase">leed</h5>
-                <h5 class="light-yellow">(Leadership in Energy and Environmental Design)</h5>
+                <h5 class="text_gold text-uppercase">leed</h5>
+                <h5 class="text_gold">(Leadership in Energy and Environmental Design)</h5>
             </div>
             <div class="col-md-6 text-justify">
                 <p>
@@ -200,10 +262,10 @@
     <div class="container">
         <div class="row">
             <div class="d-block col-12">
-                <h2 class="about_title light-yellow text-uppercase py-3">структура объектов</h2>
+                <h2 class="about_title text_gold text-uppercase py-3">структура объектов</h2>
                 <p>наведите курсором на здание, чтобы рассмотреть структуру расположения объектов</p>
                 <img src="img/about/tower.png" alt="" class="mw-100 py-5">
-                <p class="my-4 dark-grey">
+                <p class="my-4 text_grey">
                     Структура многофункционального комплекса Talan Towers включает в себя объекты различного
                     функционального назначения, в числе которых на сегодняшний день офисы Talan Towers Offices,
                     отель международного уровня The Ritz-Carlton, Astana, резиденции The Ritz-Carlton Residences,
@@ -213,6 +275,28 @@
         </div>
     </div>
 </section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="text-center w-100">
+                <a href="#">
+                    <img src="img/main/footer-facebook.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/main/footer-linkedin.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/main/footer-instagram.png" alt="">
+                </a>
+            </div>
+            <div class="text-center w-100 mt-4">
+                <a href="#" class="footer_link_contacts">
+                    Контакты
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 
