--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 align-self-md-center mb-3 mb-md-0">
-                <span class="text_font">
+                <span class="text_font text_black">
                     Talan Towers – это амбициозный проект, который выводит на новый уровень качество жизни  и предоставляемых услуг в столице.
                     Здание уже стало исключительным брендом, новой достопримечательностью на карте города, символом столицы и ее растущей
                     значимости.
@@ -152,7 +152,7 @@
 <section id="main_content_2">
     <div class="container">
         <div class="row">
-            <h1 class="title_font">
+            <h1 class="title_font text_black text-center">
                 На территории комплекса Talan Towers общей площадью 120.000 м² расположены несколько функциональных объектов. В тридцатиэтажной башне расположен бизнес-центр класса «A» Talan Towers Offices.
             </h1>
         </div>
@@ -160,17 +160,17 @@
 </section>
 <section id="main_content_3">
     <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <img src="img/main/main-ritz.png" alt="" class="mw-100">
-            </div>
-            <div class="col-md-5 offset-md-7">
-                <div class="ritz_caption">
-                    <span class="text_font">
-                        А башню в двадцать пять  этажей  занимают отель The Ritz-Carlton, Astana и апартаменты
-                        The Ritz-Carlton Residences, Astana.
-                    </span>
+        <div class="row no-gutters">
+            <div class="col-lg-6 block_content align-self-center">
+                <h1 class="title_font text_gold">
+                    Talan Towers Offices
+                </h1>
+                <div class="block_text text_font text_black">
+                    Офисы международного класса «А», которые находятся в самом сердце делового центра столицы. Уровень сервиса, предоставляемый профессиональной командой компании JLL (Jones Lang LaSalle), развитая инфраструктура, служба охраны и противопожарной безопасности, современный паркинг делают Talan Towers Offices топовым бизнес-центром, соответствующим всем международным стандартам офисных помещений.
                 </div>
+            </div>
+            <div class="col-lg-6 order-lg-first">
+                <img src="img/offices/block1.png" alt="" class="mw-100">
             </div>
         </div>
     </div>
@@ -178,16 +178,52 @@
 <section id="main_content_4">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 offset-md-4">
-                <img src="img/main/main-empor.png" alt="" class="mw-100">
+            <div class="col-12">
+                <img src="img/main/main-ritz.png" alt="" class="mw-100">
             </div>
-            <div class="col-md-7">
-                <div class="col-sm-6 col-md-6 offset-md-6 m_t">
-                    <span class="text_font">
-                        Объединяет две башни многофункционального
-                        комплекса торговая галерея EMPORIUM.
-                    </span>
+            <div class="col-md-6 offset-md-3 block_content bg-white">
+                <h1 class="title_font text_gold text-center">
+                    The Ritz-Carlton, Astana
+                </h1>
+                <div class="block_text text_font text_black">
+                    Первый пятизвездочный отель класса люкс в Астане. Здесь гости могут расположиться в просторных номерах и люксах, откуда открывается великолепный панорамный вид на современную столицу. Инфраструктура отеля включается в себя конференц-этаж для проведения деловых встреч, торжественных и официальных мероприятий, изысканные рестораны с международной кухней, Клубную гостиную, а также СПА и фитнесс-центр с полным набором услуг, которые не оставят равнодушными даже самых взыскательных особ.
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="main_content_5">
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-lg-6 block_content align-self-center">
+                <h1 class="title_font text_gold">
+                    The Ritz-Carlton Residences,
+                    Astana
+                </h1>
+                <div class="block_text text_font text_black">
+                    Двадцать семь роскошных апартаментов, которые обладают не только уникальным стилем и роскошным интерьером, но и сопровождаются привилегиями, предоставляемыми отелем международного уровня The Ritz-Carlton.
+                    От услуг консьержа и специализированной команды управления жильем до доступа к приватной резидентской инфраструктуре — владельцы апартаментов могут пользоваться этими преимуществами в полной мере.
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <img src="img/main/main-rcr.png" alt="" class="mw-100">
+            </div>
+        </div>
+    </div>
+</section>
+<section id="main_content_6">
+    <div class="container">
+        <div class="row no-gutters">
+            <div class="col-lg-6 block_content align-self-center">
+                <h1 class="title_font text_gold">
+                    Emporium
+                </h1>
+                <div class="block_text text_font text_black">
+                    Торговая галерея с общей арендной площадью 8000 кв. м., объединяющая две башни комплекса Talan Towers. Здесь расположены бутики самых известных мировых брендов премиум-класса.
+                </div>
+            </div>
+            <div class="col-lg-6 order-lg-first">
+                <img src="img/main/main-empor.png" alt="" class="mw-100">
             </div>
         </div>
     </div>
