--- a/rc_copy.html
+++ b/rc_copy.html
@@ -119,7 +119,7 @@
     </div>
 </header>
 <section id="rcr_bg" class="bg_img">
-    <img src="img/rc_copy/rc_copy_bg.png" alt="" class="mw-100 w-100">
+    <img src="img/rc_copy/rc_copy_bg.png" alt="" class="mw-100">
     <div class="bg_img_text">
         <div class="container">
             <div class="row">
