--- a/about.html
+++ b/about.html
@@ -251,6 +251,7 @@
                 <img src="img/about/leed.png" alt="" class="mw-100 py-4">
                 <h1 class="title_font text_gold">leed</h1>
                 <h1 class="title_font text_gold" style="font-size: 1.2em">(Leadership in Energy and Environmental Design)</h1>
+                <div class="text_font text_black">*Руководство по энергоэффективному и экологическому проектированию</div>
             </div>
             <div class="col-lg-6 block_content">
                 <div class="block_text text_font">
