--- a/rc.html
+++ b/rc.html
@@ -241,7 +241,7 @@
         </div>
         <div class="row">
             <div class="col-12 text-center">
-                <a href="" class="title_font text_gold" style="font-size: 1.2em">перейти на сайт отеля</a>
+                <a href="http://www.ritzcarlton.com/en/hotels/kazakhstan/astana/rooms-suites" target="_blank" class="title_font text_gold" style="font-size: 1.2em">перейти на сайт отеля</a>
             </div>
         </div>
     </div>
